Completed All the extra Products Pages.

--- a/html/productPages/bush.html
+++ b/html/productPages/bush.html
@@ -7,8 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/belowSeal.css">
-    <title>Below Seals-BB Engineering</title>
+    <link rel="stylesheet" href="../../css/productCss/bush.css">
+    <title>Bushes-BB Engineering</title>
   </head>
   <body>
     <!--Navigation-->
@@ -72,61 +72,39 @@
 <div class="container">
   <div class="container-fluid">
     <div class="content">
-      <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-            <h3>PTFE Below Seal</h3>
+      <div class="row padding">
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <h3>PTFE Bushes</h3>
             <hr>
             <h6>
-              <p>The PTFE Bellow Seal is an externally mounted seal for corrosive chemicals where contact with the media is to be avoided.</p>
-              <p>The mating seat is high alumina ceramic with excellent corrosion resistance to highly
-                corrosive chemicals like concentrated acids and other strong organic chemicals. </p>
+              <p>The PFTE element of our PTFE Bushes is made by radical-safe polymerization procedure of tetrafluoroethylene material.</p>
+              <p>As it can explosively biodegrade to carbon and tetrafluoromethane,
+                special machines are utilized for polymerization process to avert different spots that might induce harmful side responses.</p>
+              <p>This process is completed by using persulfate compound that in turn dissolves to produce sulfate radicals.</p>
+              <p>However, the resultant polymer in our PTFE Bushes is expelled with groups of sulfur ester.</p>
             </h6>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-              <img src="../../images/belowSeal.jpg" alt="gaskets" class="img-fluid"/>
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <img src="../../images/bush.jpg" class="img-fluid">
           </div>
-      </div>
-      <div class="table-properties">
-        <p class="caption">Properties</p>
-        <table
-          <tr>
-            <th>Property</th>
-            <th>Value</th>
-          </tr>
-          <tr>
-            <td>Temperature</td>
-            <td>110&degC</td>
-          </tr>
-          <tr>
-            <td>Pressure</td>
-            <td>5 Bar</td>
-          </tr>
-          <tr>
-            <td>Application</td>
-            <td>
-              <ul>
-              <li>Pharmaceutical industry</li>
-              <li>Food processing</li>
+        </div>
+        <div class="row padding bg-light">
+          <h3 style="width:100%;">Bushes we make are made up of<hr></h3>
+            <ul>
+              <li>Virgin PTFE</li>
+              <li>Glass Filled PTFE</li>
+              <li>Carbon Filled PTFE</li>
+              <li>Bronze Filled PTFE</li>
+              <li>Graphite Filled PTFE</li>
             </ul>
-            </td>
-          </tr>
-          <tr>
-            <td>Features</td>
-            <td>
-              <ul>
-                <li>High-tensile strength</li>
-                <li>Minimum maintainence</li>
-                <li>Low wear & tear</li>
-                <li>Non-flammable</li>
-                <li>Durable</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
+          <h6>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
+
 
 <!---footer--->
   <footer>
