--- a/html/productPages/etched.html
+++ b/html/productPages/etched.html
@@ -7,8 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/belowSeal.css">
-    <title>Below Seals-BB Engineering</title>
+    <link rel="stylesheet" href="../../css/productCss/bush.css">
+    <title>Etched Sheets-BB Engineering</title>
   </head>
   <body>
     <!--Navigation-->
@@ -72,61 +72,54 @@
 <div class="container">
   <div class="container-fluid">
     <div class="content">
-      <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-            <h3>PTFE Below Seal</h3>
+      <div class="row padding">
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <h3>PTFE Etched Sheets</h3>
             <hr>
             <h6>
-              <p>The PTFE Bellow Seal is an externally mounted seal for corrosive chemicals where contact with the media is to be avoided.</p>
-              <p>The mating seat is high alumina ceramic with excellent corrosion resistance to highly
-                corrosive chemicals like concentrated acids and other strong organic chemicals. </p>
+              <p>PTFE is an amazing non-stick material, but what about when you need to glue it to the suface of another material? </p>
+              <p>In order to bond standard PTFE to another surface such as stainless steel, a process called "etching" is required.</p>
+              <p>This process is completed by using persulfate compound that in turn dissolves to produce sulfate radicals.</p>
+              <p>Typical applications would include the lining of chemical process tanks or other equipment used in caustic environments.</p>
+              <p>When bonding is needed, sodium ammonia etching is usually the most economical answer.</p>
             </h6>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-              <img src="../../images/belowSeal.jpg" alt="gaskets" class="img-fluid"/>
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <img src="../../images/etched.jpg" class="img-fluid">
           </div>
-      </div>
-      <div class="table-properties">
-        <p class="caption">Properties</p>
-        <table
-          <tr>
-            <th>Property</th>
-            <th>Value</th>
-          </tr>
-          <tr>
-            <td>Temperature</td>
-            <td>110&degC</td>
-          </tr>
-          <tr>
-            <td>Pressure</td>
-            <td>5 Bar</td>
-          </tr>
-          <tr>
-            <td>Application</td>
-            <td>
-              <ul>
-              <li>Pharmaceutical industry</li>
-              <li>Food processing</li>
-            </ul>
-            </td>
-          </tr>
-          <tr>
-            <td>Features</td>
-            <td>
-              <ul>
-                <li>High-tensile strength</li>
-                <li>Minimum maintainence</li>
-                <li>Low wear & tear</li>
-                <li>Non-flammable</li>
-                <li>Durable</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
+        </div>
+        <div class="row padding bg-light">
+            <div class="col-xs-12 col-sm-12 col-md-6 jumbotron">
+              <h3>The Process:<hr></h3>
+              <p>This process uses of a mixture of sodium and ammonia that is formulated to create a bondable surface both quickly and efficiently.</p>
+              <p>Sodium/ammonia etching service complies with all applicable commercial, military & federal specifications for the surface treatment of all fluoropolymers including:
+                <ul>
+                  <li>PTFE</li>
+                  <li>PFA</li>
+                  <li>FEP</li>
+                  <li>ETFE</li>
+                  <li>PCTFE</li>
+                  <li>PVDF</li>
+                  <li>PVF</li>
+                  <li>ECTFE</li>
+                </ul>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 jumbotron">
+              <h3>Applications<hr></h3>
+              <p>From microchips to full size rolls, fluoropolymers of any shape or complexity, including tape, sheet, tubing, molded shapes & machined parts
+                of any configuration can be etched & bonded. </p>
+              <p>This treatment can be accomplished on one or more surfaces, or selectively within close tolerances</p>
+              <h4>Benefits of Etched PTFE Sheets:</h4>
+              <p>Able to be bonded after treatment.</p>
+              <p>Uniform treatment on One Side or Two Sides (Surface treatment only).</p>
+            </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
+
 
 <!---footer--->
   <footer>
