--- a/html/productPages/sksheet.html
+++ b/html/productPages/sksheet.html
@@ -7,8 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/belowSeal.css">
-    <title>Below Seals-BB Engineering</title>
+    <link rel="stylesheet" href="../../css/productCss/sksheet.css">
+    <title>Skived Sheets-BB Engineering</title>
   </head>
   <body>
     <!--Navigation-->
@@ -72,61 +72,28 @@
 <div class="container">
   <div class="container-fluid">
     <div class="content">
-      <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-            <h3>PTFE Below Seal</h3>
-            <hr>
+      <div class="row padding">
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <h3>PTFE Skived Sheets<hr></h3>
             <h6>
-              <p>The PTFE Bellow Seal is an externally mounted seal for corrosive chemicals where contact with the media is to be avoided.</p>
-              <p>The mating seat is high alumina ceramic with excellent corrosion resistance to highly
-                corrosive chemicals like concentrated acids and other strong organic chemicals. </p>
+              <p>Our PTFE Skived Sheets are effectively availed by numerous industries to complete their different mechanical operations and applications. </p>
+                <p>These are accessible in distinctive designs, lengths, sizes, thicknesses and configurations that successfully caters to the requirements of our customers. </p>
+                <p>They are completely non-toxic, chemical safe, low-weight and highly productive in any wet or dry conditions.</p>
+              <p>Moreover, they can be easily cut, bend and ground to perfectly fit into buildings, machines and allied places.</p>
+              <p>The designed PTFE Skived Sheets are provided in different colors and textures to be installed in both interior and exterior locations.<p>
+              <p>These sheets additionally have less assimilation of moisture in every application. </p>
             </h6>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-              <img src="../../images/belowSeal.jpg" alt="gaskets" class="img-fluid"/>
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <img src="../../images/sksheet.jpg" class="img-fluid">
           </div>
-      </div>
-      <div class="table-properties">
-        <p class="caption">Properties</p>
-        <table
-          <tr>
-            <th>Property</th>
-            <th>Value</th>
-          </tr>
-          <tr>
-            <td>Temperature</td>
-            <td>110&degC</td>
-          </tr>
-          <tr>
-            <td>Pressure</td>
-            <td>5 Bar</td>
-          </tr>
-          <tr>
-            <td>Application</td>
-            <td>
-              <ul>
-              <li>Pharmaceutical industry</li>
-              <li>Food processing</li>
-            </ul>
-            </td>
-          </tr>
-          <tr>
-            <td>Features</td>
-            <td>
-              <ul>
-                <li>High-tensile strength</li>
-                <li>Minimum maintainence</li>
-                <li>Low wear & tear</li>
-                <li>Non-flammable</li>
-                <li>Durable</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
+
 
 <!---footer--->
   <footer>
