--- a/html/products.html
+++ b/html/products.html
@@ -57,6 +57,11 @@
             <a href="./productPages/valve.html">PTFE Valve Components</a>
             <a href="./productPages/nozzels.html">PTFE Nozzles</a>
             <a href="./productPages/rings.html">PTFE Rings</a>
+            <a href="./productPages/WearStrip.html">PTFE Wear Strips</a>
+            <a href="./productPages/bush.html">PTFE Bushes</a>
+            <a href="./productPages/sksheet.html">PTFE Skived Sheet</a>
+            <a href="./productPages/washer.html">PTFE Washers</a>
+            <a href="./productPages/etched.html">PTFE Etched Sheets</a>
           </div>
       </div>
     </div>
@@ -126,7 +131,7 @@
           <h4 class="card-title">PTFE Valve Components</h4>
           <p class="card-text padding">These parts include valve seat(s), disc,
             glands, spacers, guides, bushings, and internal springs.</p>
-            <p><a href="./productpages/valve.html" class="btn btn-outline-secondary">See More</a></p>
+            <p><a href="./productPages/valve.html" class="btn btn-outline-secondary">See More</a></p>
           </div>
         </div>
         </div>
@@ -145,9 +150,9 @@
             <div class="card">
               <img class="card-img-top" src="../images/rings.jpg">
               <div class="card-content">
-              <h4 class="card-title">PTFE Piston Ring</h4>
+              <h4 class="card-title">PTFE Rings</h4>
               <p class="card-text padding">Being the leading manufacturers in the
-          industry, we bring PTFE Piston Ring in Pure PTFE and in other grades
+          industry, we bring PTFE Ring in Pure PTFE and in other grades
           Glass,Graphite.</p>
                 <p><a href="./productPages/rings.html" class="btn btn-outline-secondary">See More</a></p>
               </div>
@@ -156,8 +161,68 @@
       </div>
     </div>
 <hr class="my-4">
-
-
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="../images/strips.jpg">
+        <div class="card-content">
+        <h4 class="card-title">PTFE Wear Strips</h4>
+        <p class="card-text padding">PTFE makes excellent heat sealing bands and wire strips which are useful in a number of applications.</p>
+          <p><a href="./productPages/WearStrip.html" class="btn btn-outline-secondary">See More</a></p>
+        </div>
+      </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="../images/bush.jpg">
+          <div class="card-content">
+          <h4 class="card-title">PTFE Bushes</h4>
+          <p class="card-text padding">The PFTE element of our PTFE Bushes is made by radical-safe polymerization procedure of tetrafluoroethylene material. </p>
+            <p><a href="./productPages/bush.html" class="btn btn-outline-secondary">See More</a></p>
+          </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="../images/sksheet.jpg">
+            <div class="card-content">
+            <h4 class="card-title">PTFE Skived Sheet</h4>
+            <p class="card-text padding">PTFE Skived Sheets are used by numerous
+              industries to complete their different mechanical applications.</p>
+              <p><a href="./productPages/sksheet.html" class="btn btn-outline-secondary">See More</a></p>
+            </div>
+            </div>
+          </div>
+    </div>
+  </div>
+<hr class="my-4">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="card">
+        <img class="card-img-top" src="../images/washer.jpg">
+        <div class="card-content">
+        <h4 class="card-title">PTFE Washers</h4>
+        <p class="card-text padding">PTFE Washers are small components that are effectively used in
+          machines between the bolts to secure them tight.</p>
+          <p><a href="./productPages/washer.html" class="btn btn-outline-secondary">See More</a></p>
+        </div>
+      </div>
+      </div>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="../images/etched.jpg">
+            <div class="card-content">
+            <h4 class="card-title">PTFE Etched Sheet</h4>
+            <p class="card-text padding">In order to bond standard PTFE to another surface such as stainless steel, a process called "etching" is required. </p>
+              <p><a href="./productPages/etched.html" class="btn btn-outline-secondary">See More</a></p>
+            </div>
+            </div>
+          </div>
+    </div>
+  </div>
+<hr class="my-4">
 <!---footer--->
   <footer>
     <div class="container-fluid padding">
