--- a/html/productPages/Gaskets.html
+++ b/html/productPages/Gaskets.html
@@ -57,6 +57,11 @@
             <a href="valve.html">PTFE Valve Components</a>
             <a href="nozzels.html">PTFE Nozzles</a>
             <a href="rings.html">PTFE Rings</a>
+            <a href="WearStrip.html">PTFE Wear Strips</a>
+            <a href="bush.html">PTFE Bushes</a>
+            <a href="sksheet.html">PTFE Skived Sheets</a>
+            <a href="washer.html">PTFE Washers</a>
+            <a href="etched.html">PTFE Etched Sheets</a>
           </div>
       </div>
     </div>
