--- a/html/productPages/rings.html
+++ b/html/productPages/rings.html
@@ -57,6 +57,11 @@
             <a href="valve.html">PTFE Valve Components</a>
             <a href="nozzels.html">PTFE Nozzles</a>
             <a href="rings.html">PTFE Rings</a>
+            <a href="WearStrip.html">PTFE Wear Strips</a>
+            <a href="bush.html">PTFE Bushes</a>
+            <a href="sksheet.html">PTFE Skived Sheets</a>
+            <a href="washer.html">PTFE Washers</a>
+            <a href="etched.html">PTFE Etched Sheets</a>
           </div>
       </div>
     </div>
@@ -200,11 +205,10 @@
                         <p>Rider Rings, Wearing Rings, Guide Rings are also manufactured in different grades and also as per customer specification.</p>
                       </h6>
                     </div>
-
                   </div>
-      </div>
-    </div>
-  </div>
+                </div>
+              </div>
+            </div>
 
 
 
