--- a/html/productPages/wearStrip.html
+++ b/html/productPages/wearStrip.html
@@ -7,8 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/belowSeal.css">
-    <title>Below Seals-BB Engineering</title>
+    <link rel="stylesheet" href="../../css/productCss/bush.css">
+    <title>Wear Strip-BB Engineering</title>
   </head>
   <body>
     <!--Navigation-->
@@ -72,61 +72,28 @@
 <div class="container">
   <div class="container-fluid">
     <div class="content">
-      <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-            <h3>PTFE Below Seal</h3>
-            <hr>
+      <div class="row padding">
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <h3>PTFE Wear Strip/Bands<hr></h3>
             <h6>
-              <p>The PTFE Bellow Seal is an externally mounted seal for corrosive chemicals where contact with the media is to be avoided.</p>
-              <p>The mating seat is high alumina ceramic with excellent corrosion resistance to highly
-                corrosive chemicals like concentrated acids and other strong organic chemicals. </p>
+              <p>PTFE makes excellent heat sealing bands and wire strips which are useful in a number of applications.</p>
+              <h4>Heat Sealing Bands<hr></h4>
+              <p>Heat sealing bands/strips made from PTFE have excellent insulating properties.</p>
+              <p>They also have superior self -lubricating characteristics that guarantee low friction coefficient compared to metal wear strips.</p>
+              <p>However, the use of PTFE wear bands is also due to their high wear resistance.</p>
+              <p>This makes sure that the bands do not break in tough operating conditions. </p>
             </h6>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-              <img src="../../images/belowSeal.jpg" alt="gaskets" class="img-fluid"/>
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <img src="../../images/strips.jpg" class="img-fluid">
           </div>
-      </div>
-      <div class="table-properties">
-        <p class="caption">Properties</p>
-        <table
-          <tr>
-            <th>Property</th>
-            <th>Value</th>
-          </tr>
-          <tr>
-            <td>Temperature</td>
-            <td>110&degC</td>
-          </tr>
-          <tr>
-            <td>Pressure</td>
-            <td>5 Bar</td>
-          </tr>
-          <tr>
-            <td>Application</td>
-            <td>
-              <ul>
-              <li>Pharmaceutical industry</li>
-              <li>Food processing</li>
-            </ul>
-            </td>
-          </tr>
-          <tr>
-            <td>Features</td>
-            <td>
-              <ul>
-                <li>High-tensile strength</li>
-                <li>Minimum maintainence</li>
-                <li>Low wear & tear</li>
-                <li>Non-flammable</li>
-                <li>Durable</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
+
 
 <!---footer--->
   <footer>
