--- a/html/products.html
+++ b/html/products.html
@@ -57,7 +57,7 @@
             <a href="./productPages/valve.html">PTFE Valve Components</a>
             <a href="./productPages/nozzels.html">PTFE Nozzles</a>
             <a href="./productPages/rings.html">PTFE Rings</a>
-            <a href="./productPages/WearStrip.html">PTFE Wear Strips</a>
+            <a href="./productPages/wearStrip.html">PTFE Wear Strips</a>
             <a href="./productPages/bush.html">PTFE Bushes</a>
             <a href="./productPages/sksheet.html">PTFE Skived Sheet</a>
             <a href="./productPages/washer.html">PTFE Washers</a>
