--- a/html/productPages/rings.html
+++ b/html/productPages/rings.html
@@ -57,7 +57,7 @@
             <a href="valve.html">PTFE Valve Components</a>
             <a href="nozzels.html">PTFE Nozzles</a>
             <a href="rings.html">PTFE Rings</a>
-            <a href="WearStrip.html">PTFE Wear Strips</a>
+            <a href="wearStrip.html">PTFE Wear Strips</a>
             <a href="bush.html">PTFE Bushes</a>
             <a href="sksheet.html">PTFE Skived Sheets</a>
             <a href="washer.html">PTFE Washers</a>
