See More Button of Wear Strips in products.html fixed.

--- a/html/products.html
+++ b/html/products.html
@@ -169,7 +169,7 @@
         <div class="card-content">
         <h4 class="card-title">PTFE Wear Strips</h4>
         <p class="card-text padding">PTFE makes excellent heat sealing bands and wire strips which are useful in a number of applications.</p>
-          <p><a href="./productPages/WearStrip.html" class="btn btn-outline-secondary">See More</a></p>
+          <p><a href="./productPages/wearStrip.html" class="btn btn-outline-secondary">See More</a></p>
         </div>
       </div>
       </div>
