Added Ptfe Page. Additional minor fixes to other pages.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-md navbar-light sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">BB Engineering</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -25,19 +25,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">PTFE</a>
+                    <a class="nav-link" href="html/ptfe.html">PTFE</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="html/products.html">Products</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Application</a>
+                    <a class="nav-link" href="html/application.html">Application</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="html/contact.html">Contact</a>
                   </li>
               </ul>
         </div>
