--- a/html/productPages/bush.html
+++ b/html/productPages/bush.html
@@ -19,23 +19,23 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-              <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="../../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">PTFE</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../products.html">Products</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Application</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                  </li>
-              </ul>
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="../../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../ptfe.html">PTFE</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../products.html">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../application.html">Application</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../contact.html">Contact</a>
+              </li>
+          </ul>
         </div>
       </div>
     </nav>
