--- a/html/products.html
+++ b/html/products.html
@@ -24,16 +24,16 @@
                     <a class="nav-link" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">PTFE</a>
+                    <a class="nav-link" href="ptfe.html">PTFE</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Products</a>
+                    <a class="nav-link" href="products.html">Products</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Application</a>
+                    <a class="nav-link" href="application.html">Application</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
               </ul>
         </div>
