Ptfe and Filled Ptfe completed.

--- a/html/products.html
+++ b/html/products.html
@@ -27,6 +27,9 @@
                     <a class="nav-link" href="ptfe.html">PTFE</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="filled.html">Filled-PTFE</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="products.html">Products</a>
                   </li>
                   <li class="nav-item">
