--- a/html/ptfe.html
+++ b/html/ptfe.html
@@ -13,7 +13,6 @@
   </head>
   <body>
     <!--Navigation-->
-
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">BB Engineering</a>
@@ -27,6 +26,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="ptfe.html">PTFE</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="filled.html">Filled-PTFE</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="products.html">Products</a>
@@ -61,10 +63,6 @@
               <p>Standard PTFE is not suitable for injection molding, blow molding or vacuum forming (though Moldflon is).</p>
               <p>PTFE is an incredibly versatile material used across many industries, thanks to its stable and durable characteristics and affordability.</p>
             </h6>
-          </div>
-          <div class="col-12 ptfe-img">
-            <h3 class="text-left">The Molecular sturcture is given below</h3>
-            <img src="../images/ptfe-balls.png" class="img-fluid">
           </div>
         </div>
       </div>
@@ -125,7 +123,6 @@
   </div>
 </div>
 
-
 <!--Properties-->
 <div class="second">
   <div class="container">
@@ -133,7 +130,7 @@
         <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6">
           <p class="lead">
-            <ul style="list-style-type:none;">
+            <ul>
               <li>Excellent chemical resistance</li>
               <li>Working temperature -190°C to +260°C</li>
               <li>Greatest resistance to fatigue (Wöhler curve)</li>
@@ -153,195 +150,6 @@
   </div>
 </div>
 </div>
-
-
-
-<!--Filled Table -->
-<div class="third">
-  <div class="container">
-    <h2 class="display-4 text-center">PTFE Filled Compositions-Basic Properties</h2>
-    <div class="table table-responsive table-custom">
-      <table align="center">
-        <tr>
-          <th><p class="lead">Grade</p></th>
-          <th><p class="lead">Filler Content by weight(%)</p></th>
-          <th><p class="lead">Properties</p></th>
-        </tr>
-        <tr>
-          <td>Virgin PTFE</td>
-          <td>------</td>
-          <td>
-            <ul>
-              <li>Excellent Chemical Resistance</li>
-              <li>Outstanding Electrical Properties</li>
-              <li>Excellent Flexural Properties</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Chemically Modified PTFE</td>
-          <td>------</td>
-          <td>
-            <ul>
-              <li>Improved Electrical Properties</li>
-              <li>Better Frictional Properties</li>
-              <li>Advanced Permeation Resistance</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Glass Filled PTFE</td>
-          <td>15-25</td>
-          <td>
-            <ul>
-              <li>High Compressive Strength</li>
-              <li>Better Wear Resistance</li>
-              <li>Excellent Chemical Resistance</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Carbon Filled PTFE</td>
-          <td>25 - 35</td>
-          <td>
-            <ul>
-              <li>High Compressive Strength</li>
-              <li>Better Wear Resistance</li>
-              <li>Better Thermal Conductivity</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Graphite Filled PTFE</td>
-          <td>15</td>
-          <td>
-            <ul>
-              <li>Excellent Chemical Resistance</li>
- 	            <li>Outstanding Electrical Properties</li>
- 	            <li>Excellent Flexural Properties</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Bronze Filled PTFE</td>
-          <td>40 - 60</td>
-          <td>
-            <ul>
-              <li> 	High Compressive strength</li>
- 	            <li>Excellent Wear Resistance</li>
- 	            <li>Very Low Cold Flow</li>
-              <li>Good Thermal Conductivity</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Bronze + Molybdenum Disulphide Filled PTFE</td>
-          <td>55 + 5</td>
-          <td>
-            <ul>
-              <li>Improved Frictional Properties</li>
- 	            <li>High Compressive Strength</li>
- 	            <li>Excellent Wear Resistance </li>
-              <li>Very Low Cold Flow</li>
-              <li>Good Thermal Conductivity</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Glass + Molybdenum Disulphide Filled PTFE</td>
-          <td>5/15 + 5</td>
-          <td>
-            <ul>
- 	            <li>High Compressive Strength</li>
- 	            <li>Better Wear Resistance </li>
-              <li>Excellent Chemical Resistance</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Aluminum Oxide(Ceramic) Filled PTFE</td>
-          <td>5 - 10</td>
-          <td>
-            <ul>
-              <li>Excellent Compressive Strength </li>
-              <li>Excellent Chemical Resistance</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Silicon Dioxide(Silica) Filled PTFE</td>
-          <td>5 - 10</td>
-          <td>
-            <ul>
-              <li>Excellent Compressive Strength </li>
-              <li>Excellent Chemical Resistance</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Calcium Fluoride Filled PTFE</td>
-          <td>5 - 10</td>
-          <td>
-            <ul>
-              <li>Excellent Compressive Strength </li>
-              <li>Excellent Chemical Resistance</li>
-              <li> 	Excellent Wear Resistance</li>
-   	          <li>Good with Chemicals that attack glass</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Stainless Steel Filled PTFE</td>
-          <td>5 - 10</td>
-          <td>
-            <ul>
-              <li> 	Outstanding Mechanical Properties</li>
-              <li>Excellent Chemical Resistance</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Mica Filled PTFE</td>
-          <td>5 - 10</td>
-          <td>
-            <ul>
-              <li> 	Excellent Chemical Strength</li>
-              <li>Very Low Coefficient Of Thermal Expansion</li>
-              <li>	Poor Tensile properties</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Bronze Plus TSQ Filled PTFE</td>
-          <td>40 + 1</td>
-          <td>
-            <ul>
-              <li>High Compressive strength</li>
-              <li>Excellent Wear Resistance</li>
- 	            <li>Very Low Cold Flow</li>
-              <li>Good Thermal Conductivity</li>
-              <li>Better Frictional Properties</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td>Pigmented PTFE</td>
-          <td>-----</td>
-          <td>
-            <ul>
-              <li> 	Colour Coding </li>
- 	            <li>Inferior Chemical Resistance</li>
-            </ul>
-          </td>
-        </tr>
-      </table>
-    </div>
-  </div>
-</div>
-
-
-
-
 
     <!---footer--->
       <footer>
